src/HomeworkThree/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
  namespace: otus
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: otus-app
